fix: the overflow-y

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -45,6 +45,24 @@
     -moz-osx-font-smoothing: grayscale;
     font-size: 16px;
     scroll-behavior: smooth;
+    overflow-x: clip;
+    scrollbar-width: thin;
+    scrollbar-color: var(--text-border) transparent;
+    scrollbar-gutter: stable;
+  }
+
+  ::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: transparent;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: var(--text-border);
+    border-radius: 99px;
   }
 
   body {
@@ -116,7 +134,6 @@
   p {
     font-size: clamp(0.875rem, 1.5vw, 1rem);
     line-height: 1.6;
-    margin-bottom: 1rem;
   }
 
   small {
